--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;background-color: #1F2833;}
+    @media screen and (max-width: 600px) {
+        body,html {
+          width: 100%;
+        }
+    }
 
