--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,3 @@
-
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -9,47 +8,22 @@
     display: flex;
     width:100%;
     height:68px;
-    background: linear-gradient(75deg,rgb(214,180,247),rgb(173,203,231));
-
-    /*horizontally and vertically center the text  */
+    background-color: rgb(22,28,41);
     justify-content: center;
     align-items: center;
 }
-
-
 h1 {
     font-size: 25px;
     font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
     font-weight: 1000;
     text-transform: uppercase;
-    color: rgb(22,28,41);
-}
+    color: white;
+} 
 
 
-.celsius-section {
-    display: flex;
-    height: 250px;
-    background: rgb(22,28,41);
-/*horizontally and vertically center the text  */
-align-items: center;
-justify-content: center;
-}
-
-    h2 {
-        font-family: 'Lato';
-        font-weight:300;
-        font-size:30px;
-        color:white;
-    }
-    .fahrenheit-section {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: teal;
-        height: 250px;
-    }
 .logo {
+    color:yellow;
     padding: 0px5px;
     font-size:20px;
 }
